# aic

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/commands/: ask.rs  chat.rs  mod.rs  run.rs
src/core/: ai_client.rs  executor.rs  mod.rs  workflow.rs
src/utils/: mod.rs  security.rs
